--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-__pycache__
-.vscode
-.VSCodeCounter
+__pycache__/
+.vscode/
+.VSCodeCounter/
 *.egg-info
 dist
 build
-check_float.py
-python_files
-heart.png
-chplot.csv
-.~lock*
-create_table.py
-examples.md
+python_files/
